src/styles/cmps/_navbar.scss
.nav {
  height: 70px;
  width: 100%;
  background-color: transparent;
  position: fixed;
  direction: ltr;
  z-index: 1;

  &.active {
    background-color: $dark-blue;
  }
}

.nav > .nav-header {
  display: inline;
}

.price-container {
  @include normal {
    width: unset !important;
    position: unset !important;
  }

  @include narrow {
    display: flex;
    justify-content: center;
    width: 100%;
    position: absolute;
    bottom: 5rem;
  }

  @include mobile {
    bottom: 35%;
    position: absolute;
  }
}

.price-suggestion {
  margin-right: 1rem;
}

.nav > .nav-header > .nav-title {
  display: inline-block;
  font-size: 22px;
  // padding: 15px 15px 15px 15px;
  padding: 1rem;
  img {
    width: 100px;
  }
}

.nav > .nav-btn {
  display: none;
}

.nav > .nav-links {
  display: flex;
  align-items: center;
  font-size: 18px;
  float: right;
  height: 100%;
}

.nav .nav-links a {
  display: inline-block;
  padding: 13px 10px 13px 10px;
  text-decoration: none;
  color: #ffff;
  margin-right: 1rem;
}

.nav > .nav-links :nth-child(1) {
  @include normal {
    margin-right: 2rem !important;
  }

  @include narrow {
    margin-right: unset;
  }

  @include mobile {
    margin-right: unset;
  }
}

.nav .nav-links a:hover {
  background-color: rgba(0, 0, 0, 0.3);
}

.nav > #nav-check {
  display: none;
}

.logo-in-links {
  display: none;
}

@include mobile-and-narrow {
  .logo-in-links {
    display: inline-block;
    width: 100%;
    display: flex;
    justify-content: center;
    margin-right: unset !important;

    @include mobile {
      img {
        width: 206px;
        margin-right: unset !important;
      }
    }

    @include narrow {
      img {
        width: 300px;
        margin-right: unset !important;
      }
    }
  }

  .nav-links-box {
    display: flex;
    align-items: center;
    flex-direction: column;
    margin-top: 6rem;

    @include mobile {
      margin-top: 2.5rem;
    }
  }

  .nav > .nav-btn {
    display: inline-block;
    position: absolute;
    right: 20px;
    top: 1rem;
  }
  .nav > .nav-btn > label {
    display: inline-block;
    width: 50px;
    height: 50px;
    padding: 13px;
  }
  .nav > .nav-btn > label:hover,
  .nav #nav-check:checked ~ .nav-btn > label {
    cursor: pointer;
    // background-color: rgba(0, 0, 0, 0.3);
  }
  .nav > .nav-btn > label > span {
    display: block;
    width: 25px;
    height: 6px;
    border-top: 2px solid $red;
  }

  .nav > .nav-btn > label > span:nth-child(2) {
    width: 20px;
  }
  .nav > .nav-links {
    position: absolute;
    display: block;
    width: 100%;
    background-color: $dark-blue;
    height: 0px;
    transition: all 0.3s ease-in;
    overflow-y: hidden;
    top: 70px;
    left: 0px;
    z-index: 1;
  }
  .nav > .nav-links > a {
    display: block;
    width: 100%;
  }
  .nav > #nav-check:not(:checked) ~ .nav-links {
    height: 0px;
  }
  .nav > #nav-check:checked ~ .nav-links {
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: calc(100vh - 70px);
    top: 70px;
    overflow-y: auto;

    @include mobile {
      top: 69px;
      padding-top: 5rem;
    }
  }
}

